--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <header>
 <h1>HTML — мова розмітки гіпертексту</h1>
-<img src="img/html5.png" alt="html5" title="картинка html" width="200px">
+<img src="img/html5.png" alt="html5" title="картинка html" width="20%">
 </header>
 <main>
 <p>
