--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -7,7 +7,7 @@
 </head>
 <header>
 <h1>HTML — мова розмітки гіпертексту</h1>
-<img src="img/html5.png" alt="html5" title="картинка html" width="20%">
+<img src="img/html5.png" alt="html5" title="картинка html" width="150">
 </header>
 <main>
 <p>
