--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -48,14 +48,13 @@
           </p>
         </div>
       </div>
-      <section>
         <div class="section-page">
           <div class="section-container_text">
             <p id="section-title">
               Collections
             </p>
             <p id="section-subtitle">
-              you can explore ans shop many differnt collection<br/>
+              you can explore ans shop many differnt collection<br>
               from various barands here.
             </p>
             <a href="#" class="section-link">
@@ -66,10 +65,8 @@
             </a>
           </div>
         </div>
-      </section>
      </main>
      <footer>
-
       <div class="footer-page">
         <div class="footer-container_text">
           <p id="footer-title">
@@ -85,7 +82,6 @@
             </p>
           </a>
         </div>
-      <div></div>
      </footer>
   </body>
   </html>
