--- a/lesson_6/index.html
+++ b/lesson_6/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>lesson_6 </title>
+    <title>lesson_6</title>
   </head>
   <body>
      <header>
@@ -69,7 +69,7 @@
      <footer>
       <div class="footer-page">
         <div class="footer-container_text">
-          <p id="footer-title">
+          <p class="footer-title">
             Explore exciting subjects, & <br>play your way to brilliance
           </p>
           <p id="footer-subtitle">
@@ -82,6 +82,7 @@
             </p>
           </a>
         </div>
+      </div>
      </footer>
   </body>
   </html>
