--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="xzz">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,7 +62,7 @@
             <li class="list-item">
               швидке завантаження сторінок – грамотне програмування впливає на швидке відображення контенту. Чим вище швидкість, тим краще конверсія, так як користувач не встигне піти до конкурента в очікуванні завантаження сайту;
             </li>
-            <li">
+            <li>
               проста підтримка – коли код правильно структурований і містить коментарі, то його підтримкою зможуть займатися інші фахівці, вносити різні зміни і не витрачати на це багато часу;
             </li>
             <li>
@@ -128,8 +128,6 @@
           <div class="game-area-8"></div>
           <div class="game-area-9 game-area"></div>
           </div>
-        </div>
-      </div>
     </main>
     <footer>
       <div class="page-foteer">
