--- a/lesson_8/index.html
+++ b/lesson_8/index.html
@@ -17,47 +17,47 @@
           <span>- Контентне, Растрове, png - webp</span>
         </div>
         <div class="img-block">
-          <img src="img/pay 1.svg" alt="terminal">
+          <img src="img/pay1.svg" alt="terminal">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/pay 2.svg" alt="kart">
+          <img src="img/pay2.svg" alt="kart">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/pay 3.svg" alt="Cashless">
+          <img src="img/pay3.svg" alt="Cashless">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/pay 4.svg" alt="Postpaid">
+          <img src="img/pay4.svg" alt="Postpaid">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/pay 5.svg" alt="kart">
+          <img src="img/pay5.svg" alt="kart">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/pay 6.svg" alt="Cashless">
+          <img src="img/pay6.svg" alt="Cashless">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/pay 7.svg" alt="Postpaid">
+          <img src="img/pay7.svg" alt="Postpaid">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/preim 1.svg" alt="Postpaid">
+          <img src="img/preim1.svg" alt="Postpaid">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/preim 2.svg"" alt="kart">
+          <img src="img/preim2.svg" alt="kart">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/preim 3.svg" alt="Cashless">
+          <img src="img/preim3.svg" alt="Cashless">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
-          <img src="img/preim 4.svg" alt="Postpaid">
+          <img src="img/preim4.svg" alt="Postpaid">
           <span>- Контентне, Векторне, SVG</span>
         </div>
         <div class="img-block">
@@ -71,12 +71,11 @@
         <div class="img-set">
           <img src="img/img1x.webp" srcset="img/img1x.webp 1x, img/img2x.webp 2x, img/img3x.webp 3x" alt="Living room">
           <picture>
-            <source srcset="img/img1x.webp 1x img/img2x.webp 2x img/img3x.webp 3x">
+            <source srcset="img/img1x.webp">
             <img src="img/img1x.webp" alt="Living room">
           </picture>
         </div>
         </div>
-      </div>
     </main>
     <footer></footer>
   </body>
