--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -35,7 +35,7 @@
             <div class="button header-nav__button"></div>
             <form action="#"></form>
             <div class="icon"><img src="#" alt="mob-tel"></div>
-            <div class="header-nav--telefon">0679244545</div>
+            <div class="header-nav__telefon">0679244545</div>
             <div class="icon"><img src="#" alt="like"></div>
             <div class="icon"><img src="#" alt="korzina"></div>
           </div>
@@ -58,42 +58,42 @@
         <div class="title">Популярні категорії</div>
         <div class="container-bloks">
           <div class="container-bloks__card">
-            <div class="container-bloks__card--subtitle">
+            <div class="title-card">
               <span>Ліжка</span>
               <span>54</span>
             </div>
             <img src="img/bed.png" alt="bed">
           </div>
           <div class="container-bloks__card">
-            <div class="container-bloks__card--subtitle">
+            <div class="title-card">
               <span>Ліжка</span>
               <span>54</span>
             </div>
             <img src="img/bed.png" alt="bed">
           </div>
           <div class="container-bloks__card">
-            <div class="container-bloks__card--subtitle">
+            <div class="title-card">
               <span>Ліжка</span>
               <span>54</span>
             </div>
             <img src="img/bed.png" alt="bed">
           </div>
           <div class="container-bloks__card">
-            <div class="container-bloks__card--subtitle">
+            <div class="title-card">
               <span>Комоди</span>
               <span>54</span>
             </div>
             <img src="img/bed.png" alt="bed">
           </div>
           <div class="container-bloks__card">
-            <div class="container-bloks__card--subtitle">
+            <div class="title-card">
               <span>Шафи</span>
               <span>79</span>
             </div>
             <img src="img/bed.png" alt="bed">
           </div>
           <div class="container-bloks__card">
-            <div class="container-bloks__card--subtitle">
+            <div class="title-card">
               <span>М'які меблі
                 196</span>
               <span>54</span>
@@ -101,14 +101,14 @@
             <img src="img/bed.png" alt="bed">
           </div>
           <div class="container-bloks__card">
-            <div class="container-bloks__card--subtitle">
+            <div class="title-card">
               <span>Матраци</span>
               <span>34</span>
             </div>
             <img src="img/bed.png" alt="bed">
           </div>
           <div class="container-bloks__card">
-            <div class="container-bloks__card--subtitle">
+            <div class="title-card">
               <span>Ліжка</span>
               <span>54</span>
             </div>
