--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="container-bloks__block">
-            <img src="img/img (1).png" alt="bed">
+            <img src="img/img.jpg" alt="bed">
             <div class="container-bloks__sub-title">Розмір: 61 x 184 x 2130 мм</div>
             <div class="container-bloks__title">Ліжко Спарта / Sparta з підйомним механізмом</div>
             <div class="container-bloks__sub-title size-afer-icon">В наявності</div>
