--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -14,11 +14,11 @@
             <li class="menu__item"><a href="#" class="menu__img-link"><img src="img/logo-header.svg" alt="logotup"></a></li>
             <li class="menu__item"><a href="#" class="menu__link">Каталог</a>
               <ul class="menu__menu-sub sub-menu">
-                <ul class="sub-menu__dropdown dropdown">
+                <li class="sub-menu__dropdown dropdown">
                   <a href="#" class="dropdown__link"><li class="dropdown__item"></li></a>
                   <a href="#" class="dropdown__link"><li class="dropdown__item"></li></a>
                   <a href="#" class="dropdown__link"><li class="dropdown__item"></li></a>
-                </ul>
+                </li>
                 <li class="sub-menu__item" id="block-1">
                   <a href="#" class="sub-menu__link sub-menu__link--border-radius" id="bet">
                     <img src="img/1-bet.svg" alt="bet" class="sub-menu__img">
@@ -204,7 +204,8 @@
           Ми співпрацюємо тільки з найкращими вітчизняними та зарубіжними фабриками та компаніями, які отримали визнання покупців та експертів меблевої справи. Для нас важливо, щоб товар, який ми продаємо, відповідав міжнародним стандартам якості, був із сертифікованих матеріалів – довговічних, красивих та екологічно чистих. Ми з особливою ретельністю відбираємо пропозиції для магазину, тому можемо поручитися за їхню якість і впевнено рекомендувати клієнтам. У нас ви легко знайдете меблеві серії в класичному та модерному стилі, лінійки для оформлення житла в дусі романтики або скандинавського лаконізму.
         </p>
       </div>
-      </footer>
+      </div>
+    </footer>
     </div>
   </body>
   </html>
