--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -13,8 +13,7 @@
           Homework 11
         </div>
       </header>
-      <main>
-          <div class="page-title">&#9650 2D Transforms &#9651</div>
+          <div class="page-title">&#96502DTransforms&#9651</div>
           <div class="page__container cards-wrapper">
             <div class="cards-wrapper__card card">
               <div class="cards-wrapper__transform" id="translate">
@@ -27,7 +26,7 @@
               </div>
             </div>
             <div class="cards-wrapper__card card">
-              <div class="cards-wrapper__transform" id="translateY-">
+              <div class="cards-wrapper__transform" id="translateX-">
                 translateY(-20px)
               </div>
             </div>
@@ -107,7 +106,7 @@
               </div>
             </div>
           </div>
-          <div class="page-title">&#9651 3D Transforms &#9650 </div>
+          <div class="page-title">&#96513D Transforms&#9650</div>
             <div class="page__container cards-wrapper">
               <div class="cards-wrapper__card card">
                 <div class="cards-wrapper__transform" id="translate3d">
@@ -136,7 +135,7 @@
                 </div>
               </div>
             </div>
-            <div class="page-title">&#9650 Одна гривня &#9651</div>
+            <div class="page-title">&#9650Одна гривня&#9651</div>
             <div class="card">
               <div class="card__body">
                 <div class="card__back">
@@ -148,8 +147,7 @@
               </div>
             </div>
           </div>
-      </main>
-      <div class="page-title">&#9650 Car &#9651</div>
+      <div class="page-title">&#9650Car&#9651</div>
       <div class="car-section">
         <div class="flashers">
           <div class="car-front"></div>
@@ -170,10 +168,7 @@
           <div class="back-fara"></div>
           <div class="car-text">POLICE</div>
         </div>
-        
-
       </div>
       <footer></footer>
-    </div>
   </body>
   </html>
