--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -13,7 +13,7 @@
           Homework 11
         </div>
       </header>
-          <div class="page-title">&#96502DTransforms&#9651</div>
+          <div class="page-title">&#9650;2DTransforms&#9651;</div>
           <div class="page__container cards-wrapper">
             <div class="cards-wrapper__card card">
               <div class="cards-wrapper__transform" id="translate">
@@ -101,12 +101,12 @@
               </div>
             </div>
             <div class="cards-wrapper__card card">
-              <div class="cards-wrapper__transform" id="translate">
+              <div class="cards-wrapper__transform" id="translateXX">
                 translate(-15%,-10%)
               </div>
             </div>
           </div>
-          <div class="page-title">&#96513D Transforms&#9650</div>
+          <div class="page-title">&#96513D;Transforms&#9650;</div>
             <div class="page__container cards-wrapper">
               <div class="cards-wrapper__card card">
                 <div class="cards-wrapper__transform" id="translate3d">
@@ -135,7 +135,7 @@
                 </div>
               </div>
             </div>
-            <div class="page-title">&#9650Одна гривня&#9651</div>
+            <div class="page-title">&#9650;Одна гривня&#9651;</div>
             <div class="card">
               <div class="card__body">
                 <div class="card__back">
@@ -147,7 +147,7 @@
               </div>
             </div>
           </div>
-      <div class="page-title">&#9650Car&#9651</div>
+      <div class="page-title">&#9650;Car&#9651;</div>
       <div class="car-section">
         <div class="flashers">
           <div class="car-front"></div>
