--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -106,7 +106,7 @@
               </div>
             </div>
           </div>
-          <div class="page-title">&#96513D;Transforms&#9650;</div>
+          <div class="page-title">&#9650;Transforms&#9650;</div>
             <div class="page__container cards-wrapper">
               <div class="cards-wrapper__card card">
                 <div class="cards-wrapper__transform" id="translate3d">
