--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -39,6 +39,7 @@
                   <li class="top-menu__item">
                     <a href="#" class="top-menu__link">Допомога і консультація:</a>
                   </li>
+                  <div class="top-menu__div">
                   <ul class="top-menu__icons">
                     <li class="top-menu__item">
                       <a href="#" class="top-menu__link">
@@ -56,6 +57,7 @@
                       </a>
                     </li>
                   </ul>
+                </div>
                   <li class="top-menu__item top-menu__item--language">
                     <span>Ua</span>
                   </li>
