--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -191,8 +191,8 @@
                 <div class="section-form__row">
                   <div class="section-form__block">
                   <input class="section-form__input" required name="form@[]" placeholder="Прізвище" type="text">
-                  <input class="section-form__input" required name="form@[]" placeholder="Прізвище" type="text">
-                  <input class="section-form__input" required name="form@[]" placeholder="Прізвище" type="text">
+                  <input class="section-form__input" required name="form@[]" placeholder="Ім’я" type="text">
+                  <input class="section-form__input" required name="form@[]" placeholder="По батькові" type="text">
                   </div>
                   <div class="section-form__block">
                     <input class="section-form__input" required name="form@[]" placeholder="Контактний телефон" type="tel">
@@ -223,7 +223,7 @@
                     </label>
                   </li>
                   <li class="section-form__item way">
-                    <input class="way__input" checked id="pickup" type="radio" value="pickup" name="delivery">
+                    <input class="way__input" checked id="pickup-2" type="radio" value="pickup" name="delivery">
                     <label class="way__row-label" for="pickup">
                       <img class="way__image" src="img/np.svg" alt="shop">
                       <span class="way__title">
@@ -233,7 +233,7 @@
                     </label>
                   </li>
                   <li class="section-form__item way">
-                    <input class="way__input" checked id="pickup" type="radio" value="pickup" name="delivery">
+                    <input class="way__input" checked id="pickup-3" type="radio" value="pickup" name="delivery">
                     <label class="way__row-label" for="pickup">
                       <img class="way__image" src="img/shop.svg" alt="shop">
                       <span class="way__title">
