--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -38,7 +38,7 @@
                 </ul>
                 <ul class="top-menu__media">
                   <li class="top-menu__item">
-                    <a href="#" class="top-menu__link">Допомога і консультація:</a>
+                    <a href="#" tabindex="-1" class="top-menu__link ">Допомога і консультація:</a>
                     <ul class="top-menu__icons">
                       <li class="top-menu__item">
                         <a href="#" class="top-menu__link">
@@ -87,12 +87,12 @@
                   </div>
                 </div>
                 <div class="midle-menu__phone phone">
-                  <div class="phone__icon">
+                  <div tabindex="0" class="phone__icon">
                     <img src="img/icon-tel.svg" alt="icon-telefon">
                   </div>
                   <div class="phone__content">
                     <div class="phone__time">Щодня з 9:00 до 18:00</div>
-                    <div class="phone__namber">067 929-45-45</div>
+                    <div tabindex="0" class="phone__namber">067 929-45-45</div>
                   </div>
                   <div class="phone__arrow">
                     <img src="img/arrow.svg" alt="strilka">
@@ -201,7 +201,7 @@
                 </div>
                 <label class="section-form__checkbox checkbox">
                   <input type="checkbox" class="checkbox__input">
-						      <span class="checkbox__text">Отримуватиме замовлення інша людина</span>
+						      <span tabindex="0" class="checkbox__text">Отримуватиме замовлення інша людина</span>
                 </label>
               </div>
               <div class="form-orders__section section-form">
@@ -266,41 +266,41 @@
                   <div class="section-form__title">Вибір способу оплати</div>
                 </div>
                 <ul class="section-form__payment-item payment">
-                  <li class="payment__list">
+                  <li tabindex="0" class="payment__list">
                     <label class="payment__radio radio">
                       <input type="radio" name="some-name" class="radio__input">
                       <span class="radio__text">Готівкою при отриманні (Післясплата)</span>
                     </label>
                   </li>
-                  <li class="payment__list">
+                  <li tabindex="0" class="payment__list">
                     <label class="payment__radio radio">
-                      <input type="radio" name="some-name" class="radio__input">
+                      <input checked type="radio" name="some-name" class="radio__input">
                       <span class="radio__text">Оплата карткою на сайті</span>
                       <img src="img/Group.svg" alt="mastercard">
                       <img src="img/visa-card-logo.svg" alt="visa">
                     </label>
                   </li>
-                  <li class="payment__list">
+                  <li tabindex="0" class="payment__list">
                     <label class="payment__radio radio">
                       <input type="radio" name="some-name" class="radio__input">
                       <span class="radio__text">Privat Pay</span>
                       <img src="img/privat-pay-logo.svg" alt="privat-bank">
                     </label>
                   </li>
-                  <li class="payment__list">
+                  <li tabindex="0" class="payment__list">
                     <label class="payment__radio radio">
                       <input type="radio" name="some-name" class="radio__input">
                       <span class="radio__text">Кредит від Krovato</span>
                     </label>
                   </li>
-                  <li class="payment__list">
+                  <li tabindex="0" class="payment__list">
                     <label class="payment__radio radio">
                       <input type="radio" name="some-name" class="radio__input">
                       <span class="radio__text">Оплата частинами ПриватБанк</span>
                       <img src="img/privaty-credit-logo.svg" alt="credit-privat">
                     </label>
                   </li>
-                  <li class="payment__list">
+                  <li tabindex="0" class="payment__list">
                     <label class="payment__radio radio">
                       <input type="radio" name="some-name" class="radio__input">
                       <span class="radio__text">Оплата частинами МоноБанк</span>
