--- a/lesson_15-16/index.html
+++ b/lesson_15-16/index.html
@@ -88,7 +88,7 @@
                   <button type="submit" class="search-midle-menu__button"></button>
                 </form>
                 <div class="midle-menu__phone phone">
-                  <a href="tel:067 929-45-45" tabindex="0" class="phone__icon">
+                  <a href="tel:0679294545" tabindex="0" class="phone__icon">
                     <img src="img/icon-tel.svg" alt="icon-telefon">
                   </a>
                   <div class="phone__content">
