--- a/lesson_15-16/index.html
+++ b/lesson_15-16/index.html
@@ -88,9 +88,9 @@
                   <button type="submit" class="search-midle-menu__button"></button>
                 </form>
                 <div class="midle-menu__phone phone">
-                  <a href="tel:0679294545" tabindex="0" class="phone__icon">
+                  <button type="button" class="phone__icon">
                     <img src="img/icon-tel.svg" alt="icon-telefon">
-                  </a>
+                  </button>
                   <div class="phone__content">
                     <div class="phone__time">Щодня з 9:00 до 18:00</div>
                     <div tabindex="0" class="phone__namber">067 929-45-45</div>
@@ -186,6 +186,7 @@
                       Офіс
                     </a>
                   </li>
+                  
                 </ul>
               </div>
             </div>
