--- a/lesson_18/index.html
+++ b/lesson_18/index.html
@@ -58,7 +58,7 @@
                 <li class="social__item">
                   <a href="#" class="social__link social__link--youtube"></a>
                 </li>
-                <button type="button" class="menu-icon">
+                <button type="button" class="social__button menu-icon">
                   <span></span>
                 </button>
               </ul>
@@ -98,8 +98,8 @@
         </div>
         <div class="about">
           <div class="about__container">
-            <h2 class="about__title title">About me</h2>
-            <h3 class="about__subtitle subtitle">Welcome to the cinematic realm of Jimmy, where creativity meets technology to craft visually stunning narratives. With a passion for storytelling and a keen eye for detail, I embark on a journey to transform ordinary footage into extraordinary visual experiences.</h3>
+            <h2 data-da=".about,767.98,2" class="about__title title">About me</h2>
+            <h3 data-da=".about,767.98,3" class="about__subtitle subtitle">Welcome to the cinematic realm of Jimmy, where creativity meets technology to craft visually stunning narratives. With a passion for storytelling and a keen eye for detail, I embark on a journey to transform ordinary footage into extraordinary visual experiences.</h3>
             <div class="about__nav nav-about">
               <ul class="nav-about__list">
                 <li class="nav-about__item">
