--- a/lesson_18-2/index.html
+++ b/lesson_18-2/index.html
@@ -78,7 +78,7 @@
           <div class="hero__container">
             <div class="hero__wrap">
               <article class="hero__content content-hero">
-                <div class="content-hero__name">Jimmy Turner</div>
+                <h3 class="content-hero__name">Jimmy Turner</h3>
                 <h2 class="content-hero__title title">Professional video
                   editor</h2>
                 <h3 class="content-hero__subtitle subtitle">Making your videos
@@ -89,8 +89,8 @@
                 </button>
               </article>
               <div class="hero__contant-media media">
-                <picture data-da=".about__container--adaptiv,767.98,0"
-                  data-da=".about__container--adaptiv,479.98,0"
+                <picture
+                  data-da=".about__container--adaptiv,767.98,0"
                   class="media__photo-people">
                   <img src="img/media__photo-people.png" alt="photo-people">
                 </picture>
@@ -112,7 +112,7 @@
         </section>
         <section class="about">
           <div class="about__container">
-            <div class="about__container--adaptiv"></div>
+            <h3 class="about__container--adaptiv"></h3>
             <article>
               <h2 class="about__title title">About
                 me</h2>
@@ -192,7 +192,7 @@
                   <div class="item-portfolio__icon">
                     <img src="./img/Play.svg" alt="play">
                   </div>
-                  <div class="item-portfolio__text">play video</div>
+                  <h3 class="item-portfolio__text">play video</h3>
                 </a>
                 <div class="item-portfolio__lebel">cash cow</div>
               </article>
@@ -203,7 +203,7 @@
                   <div class="item-portfolio__icon">
                     <img src="./img/Play.svg" alt="play">
                   </div>
-                  <div class="item-portfolio__text">play video</div>
+                  <h3 class="item-portfolio__text">play video</h3>
                 </a>
                 <div class="item-portfolio__lebel">Reel</div>
               </article>
@@ -214,7 +214,7 @@
                   <div class="item-portfolio__icon">
                     <img src="./img/Play.svg" alt="play">
                   </div>
-                  <div class="item-portfolio__text">play video</div>
+                  <h3 class="item-portfolio__text">play video</h3>
                 </a>
                 <div class="item-portfolio__lebel">Vlog</div>
               </article>
@@ -225,7 +225,7 @@
                   <div class="item-portfolio__icon">
                     <img src="./img/Play.svg" alt="play">
                   </div>
-                  <div class="item-portfolio__text">play video</div>
+                  <h3 class="item-portfolio__text">play video</h3>
                 </a>
                 <div class="item-portfolio__lebel">casino</div>
               </article>
@@ -236,7 +236,7 @@
                   <div class="item-portfolio__icon">
                     <img src="./img/Play.svg" alt="play">
                   </div>
-                  <div class="item-portfolio__text">play video</div>
+                  <h3 class="item-portfolio__text">play video</h3>
                 </a>
                 <div class="item-portfolio__lebel">cash cow</div>
               </article>
@@ -247,7 +247,7 @@
                   <div class="item-portfolio__icon">
                     <img src="./img/Play.svg" alt="play">
                   </div>
-                  <div class="item-portfolio__text">play video</div>
+                  <h3 class="item-portfolio__text">play video</h3>
                 </a>
                 <div class="item-portfolio__lebel">cash cow</div>
               </article>
@@ -256,247 +256,6 @@
         </section>
       </main>
       <footer></footer>
-
-      <!--
-      <header class="header">
-        <div class="header__container">
-          <div class="header__top">
-            <div class="header__logo">
-              <a href="#">
-                <img src="img/Logo.svg" alt="logo">
-              </a>
-            </div>
-            <div class="header__menu menu">
-              <nav class="menu__nav">
-                <ul class="menu__list">
-                  <li class="menu-header__item">
-                    <a href="#" class="menu-header__link">
-                      home
-                    </a>
-                  </li>
-                  <li class="menu-header__item">
-                    <a href="#" class="menu-header__link">
-                      about
-                    </a>
-                  </li>
-                  <li class="menu-header__item">
-                    <a href="#" class="menu-header__link">
-                      portfolio
-                    </a>
-                  </li>
-                  <li class="menu-header__item">
-                    <a href="#" class="menu-header__link">
-                      testimonials
-                    </a>
-                  </li>
-                  <li class="menu-header__item">
-                    <a href="#" class="menu-header__link">
-                      contact
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <div class="header__social social">
-              <ul class="social__list">
-                <li class="social__item">
-                  <a href="#" class="social__link">
-                    <img src alt class="social__image">
-                  </a>
-                </li>
-                <li class="social__item">
-                  <a href="#" class="social__link">
-                    <img src alt class="social__image">
-                  </a>
-                </li>
-                <li class="social__item">
-                  <a href="#" class="social__link">
-                    <img src alt class="social__image">
-                  </a>
-                </li>
-                <button type="button" class="social__button menu-icon">
-                  <span></span>
-                </button>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </header>
-      <main class="page">
-        <div class="hero hero--margin">
-          <div class="hero__container">
-            <div class="hero__wrap">
-              <div class="hero__content content-hero">
-                <div class="content-hero__name">Jimmy Turner</div>
-                <h2 class="content-hero__title title">Professional video
-                  editor</h2>
-                <h3 class="content-hero__subtitle subtitle">Making your videos
-                  look more cool.</h3>
-                <a class="content-hero__button button">lets talk</a>
-              </div>
-              <div class="hero__contant-media media">
-                <div data-da=".about, 767.98, 1" class="media__photo-people">
-                  <img src="img/media__photo-people.png" alt="photo-people">
-                </div>
-                <div class="media__img-right">
-                  <img src="img/media__img-right.png" alt="img-right">
-                </div>
-                <div class="media__img-left">
-                  <img src="img/media__img-left.png" alt="img-left">
-                </div>
-                <div class="media__curent-left">
-                  <img src="img/media__curent-left.png" alt="curent-left">
-                </div>
-                <div class="media__curent-right">
-                  <img src="img/media__curent-right.png" alt="curent-right">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="about">
-          <div class="about__container">
-            <h2 data-da=".about,767.98,2" class="about__title title">About
-              me</h2>
-            <h3 data-da=".about,767.98,3"
-              class="about__subtitle subtitle">Welcome to the cinematic realm of
-              Jimmy, where creativity meets technology to craft visually
-              stunning narratives. With a passion for storytelling and a keen
-              eye for detail, I embark on a journey to transform ordinary
-              footage into extraordinary visual experiences.</h3>
-            <div class="about__nav nav-about">
-              <ul class="nav-about__list">
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">Cash cow editing</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">Reels editng</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">logo animation</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">podcast edit</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">Cash cow editing</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">Reels editng</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">logo animation</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">podcast edit</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">Cash cow editing</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">Reels editng</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">logo animation</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">podcast edit</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">Cash cow editing</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">Reels editng</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">logo animation</a>
-                </li>
-                <li class="nav-about__item">
-                  <a href="#" class="nav-about__link">podcast edit</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="portfolio">
-          <div class="portfolio__container">
-            <h2 class="portfolio__title title">my best edits</h2>
-            <a href="#" class="portfolio__arrow">
-              <img src="./img/arrow.svg" alt="arrow">
-            </a>
-            <div class="portfolio__items">
-              <div class="portfolio__item item-portfolio">
-                <a href="#" class="item-portfolio__picture">
-                  <img src="./img/edit-1.jpg" alt="item-portfolio__img"
-                    class="item-portfolio__img">
-                  <div class="item-portfolio__icon">
-                    <img src="./img/Play.svg" alt="play">
-                  </div>
-                  <div class="item-portfolio__text">play video</div>
-                </a>
-                <div class="item-portfolio__lebel">cash cow</div>
-              </div>
-              <div class="portfolio__item item-portfolio">
-                <a href="#" class="item-portfolio__picture">
-                  <img src="./img/edit-2.jpg" alt="item-portfolio__img"
-                    class="item-portfolio__img">
-                  <div class="item-portfolio__icon">
-                    <img src="./img/Play.svg" alt="play">
-                  </div>
-                  <div class="item-portfolio__text">play video</div>
-                </a>
-                <div class="item-portfolio__lebel">Reel</div>
-              </div>
-              <div class="portfolio__item item-portfolio">
-                <a href="#" class="item-portfolio__picture">
-                  <img src="./img/edit-3.jpg" alt="item-portfolio__img"
-                    class="item-portfolio__img">
-                  <div class="item-portfolio__icon">
-                    <img src="./img/Play.svg" alt="play">
-                  </div>
-                  <div class="item-portfolio__text">play video</div>
-                </a>
-                <div class="item-portfolio__lebel">Vlog</div>
-              </div>
-              <div class="portfolio__item item-portfolio">
-                <a href="#" class="item-portfolio__picture">
-                  <img src="./img/edit-4.jpg" alt="item-portfolio__img"
-                    class="item-portfolio__img">
-                  <div class="item-portfolio__icon">
-                    <img src="./img/Play.svg" alt="play">
-                  </div>
-                  <div class="item-portfolio__text">play video</div>
-                </a>
-                <div class="item-portfolio__lebel">casino</div>
-              </div>
-              <div class="portfolio__item item-portfolio">
-                <a href="#" class="item-portfolio__picture">
-                  <img src="./img/edit-1.jpg" alt="item-portfolio__img"
-                    class="item-portfolio__img">
-                  <div class="item-portfolio__icon">
-                    <img src="./img/Play.svg" alt="play">
-                  </div>
-                  <div class="item-portfolio__text">play video</div>
-                </a>
-                <div class="item-portfolio__lebel">cash cow</div>
-              </div>
-              <div class="portfolio__item item-portfolio">
-                <a href="#" class="item-portfolio__picture">
-                  <img src="./img/edit-1.jpg" alt="item-portfolio__img"
-                    class="item-portfolio__img">
-                  <div class="item-portfolio__icon">
-                    <img src="./img/Play.svg" alt="play">
-                  </div>
-                  <div class="item-portfolio__text">play video</div>
-                </a>
-                <div class="item-portfolio__lebel">cash cow</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </main>
-      <footer class="footer"></footer>
-    -->
     </div>
     <script src="js/script.js"></script>
     <script src="js/dynamic_adapt.js"></script>
