--- a/lesson_18-2/index.html
+++ b/lesson_18-2/index.html
@@ -74,7 +74,7 @@
         </div>
       </header>
       <main class="page">
-        <section class="hero hero--margin">
+        <div class="hero hero--margin">
           <div class="hero__container">
             <div class="hero__wrap">
               <article class="hero__content content-hero">
@@ -109,10 +109,10 @@
               </div>
             </div>
           </div>
-        </section>
-        <section class="about">
+        </div>
+        <div class="about">
           <div class="about__container">
-            <h3 class="about__container--adaptiv"></h3>
+            <div class="about__container--adaptiv"></div>
             <article>
               <h2 class="about__title title">About
                 me</h2>
@@ -177,7 +177,7 @@
               </ul>
             </div>
           </div>
-        </section>
+        </div>
         <section class="portfolio">
           <div class="portfolio__container">
             <h2 class="portfolio__title title">my best edits</h2>
