--- a/lesson_18-2/index.html
+++ b/lesson_18-2/index.html
@@ -90,7 +90,7 @@
               </article>
               <div class="hero__contant-media media">
                 <picture
-                  data-da=".about__container--adaptiv,767.98,0"
+                  data-da=".about__adaptiv,767.98,0"
                   class="media__photo-people">
                   <img src="img/media__photo-people.png" alt="photo-people">
                 </picture>
@@ -112,7 +112,7 @@
         </div>
         <div class="about">
           <div class="about__container">
-            <div class="about__container--adaptiv"></div>
+            <div class="about__adaptiv"></div>
             <article>
               <h2 class="about__title title">About
                 me</h2>
