--- a/lesson_19/index.html
+++ b/lesson_19/index.html
@@ -92,27 +92,27 @@
           <div class="brand__container">
             <ul class="brand__list">
               <li class="brand__item">
-                <a href class="brand__link">
+                <a href="#" class="brand__link">
                   <img src="./img/brand-1.svg" alt="graphic" class="brand__img">
                 </a>
               </li>
               <li class="brand__item">
-                <a href class="brand__link">
+                <a href="#" class="brand__link">
                   <img src="./img/brand-2.svg" alt="graphic" class="brand__img">
                 </a>
               </li>
               <li class="brand__item">
-                <a href class="brand__link">
+                <a href="#" class="brand__link">
                   <img src="./img/brand-3.svg" alt="graphic" class="brand__img">
                 </a>
               </li>
               <li class="brand__item">
-                <a href class="brand__link">
+                <a href="#" class="brand__link">
                   <img src="./img/brand-4.svg" alt="graphic" class="brand__img">
                 </a>
               </li>
               <li class="brand__item">
-                <a href class="brand__link">
+                <a href="#" class="brand__link">
                   <img src="./img/brand-5.svg" alt="graphic" class="brand__img">
                 </a>
               </li>
@@ -123,7 +123,7 @@
           <div class="hot-category__container">
             <h3 class="hot-category__title">Explore new and popular styles</h3>
             <div class="hot-category__popular popular-container">
-              <a href class="popular-container__item">
+              <a href="#" class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                   <div class="labels-product__red">
                     <span>hot</span>
@@ -139,7 +139,7 @@
                 <img src="./img/popular-container__image01.webp" alt="photo"
                   class="popular-container__image">
               </a>
-              <a href class="popular-container__item">
+              <a href="#" class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                   <div class="labels-product__red">hot</div>
                   <div class="labels-product__black">sale</div>
@@ -155,7 +155,7 @@
                 <img src="./img/popular-container__image02.webp" alt="photo"
                   class="popular-container__image">
               </a>
-              <a href class="popular-container__item">
+              <a href="#" class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                 </div>
                 <div class="popular-container__submenu submenu-products">
@@ -167,7 +167,7 @@
                 <img src="./img/popular-container__image03.webp" alt="photo"
                   class="popular-container__image">
               </a>
-              <a href class="popular-container__item">
+              <a href="#" class="popular-container__item">
                 <div class="popular-container__labels labels-product">
                   <div class="labels-product__red">hot</div>
                 </div>
@@ -180,7 +180,7 @@
                 <img src="./img/popular-container__image04.webp" alt="photo"
                   class="popular-container__image">
               </a>
-              <a href class="popular-container__item">
+              <a href="#" class="popular-container__item">
                 <div class="popular-container__labels labels-product">
 
                   <div
@@ -233,7 +233,7 @@
             </div>
             <div class="section-products__grid grid-products">
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">hot</div>
                     <div class="labels-product__black">sale</div>
@@ -265,7 +265,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">hot</div>
                     <div class="labels-product__black">sale</div>
@@ -293,7 +293,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div
                       class="labels-product__white">limited</div>
@@ -320,7 +320,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">hot</div>
                     <div
@@ -348,7 +348,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__image image-products">
                     <img src="./img/products05.webp" alt="photo-product"
                       class="image-products__img">
@@ -371,7 +371,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">hot</div>
                     <div class="labels-product__black">sale</div>
@@ -400,7 +400,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__image image-products">
                     <img src="./img/products07.webp" alt="photo-product"
                       class="image-products__img">
@@ -423,7 +423,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">hot</div>
                   </div>
@@ -503,7 +503,7 @@
             </div>
             <div class="slider-products__grid grid-products">
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">hot</div>
                     <div class="labels-product__black">sale</div>
@@ -535,7 +535,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">hot</div>
                     <div class="labels-product__black">sale</div>
@@ -563,7 +563,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div
                       class="labels-product__white">limited</div>
@@ -590,7 +590,7 @@
                 </a>
               </article>
               <article>
-                <a href class="grid-products__item">
+                <a href="#" class="grid-products__item">
                   <div class="grid-products__labels labels-product">
                     <div class="labels-product__red">hot</div>
                     <div
